tests/ui/traits/object/elaborated-predicates-unconstrained-late-bound.stderr
error[E0582]: binding for associated type `T` references lifetime `'a`, which does not appear in the trait input types
  --> $DIR/elaborated-predicates-unconstrained-late-bound.rs:19:21
   |
LL | trait A<T>: B<T = T> {}
   |               ----- due to this supertrait
...
LL |         Erase::<dyn for<'a> A<&'a _>>(x.as_str())
   |                     ^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0582`.
